--- a/webservice/templates/campaign_overview.html
+++ b/webservice/templates/campaign_overview.html
@@ -111,7 +111,7 @@ Campaign: <a class="stagelink" href="{{pomspath}}/show_campaign_stages/{{session
 				</button>
 			</div>
 			<div class=item>
-				<button onclick="location.href='{{pomspath}}/gui_wf_edit/{{session_experiment}}/{{session_role}}?campaign={{s.name|urlencode}}&data_handling_service={{s.data_handling_service}}'">
+				<button onclick="location.href='{{pomspath}}/gui_wf_edit/{{session_experiment}}/{{session_role}}?campaign={{s.name|urlencode}}&campaign_id={{s.campaign_id}}&data_handling_service={{s.data_handling_service}}'">
 					<i class="edit icon blue"></i> Edit Campaign
 				</button>
 			</div>
