--- a/webservice/templates/campaign_stage_edit.html
+++ b/webservice/templates/campaign_stage_edit.html
@@ -117,6 +117,11 @@ Campaign Stages
         {% if row.Campaign.data_handling_service == "data_dispatcher" %}
           <td id="c_dd_dataset_query_{{loop.index}}">{{row.CampaignStage.data_dispatcher_dataset_query}}</td>
           <td id="c_dd_project_id_{{loop.index}}">{{row.CampaignStage.data_dispatcher_project_id}}</td>
+          <td id="c_dd_stage_methodology_{{loop.index}}">{{row.CampaignStage.data_dispatcher_stage_methodology}}</td>
+          <td id="c_dd_recovery_mode_{{loop.index}}">{{row.CampaignStage.data_dispatcher_recovery_mode}}</td>
+          <td id="c_dd_virtual_{{loop.index}}">{{row.CampaignStage.data_dispatcher_project_virtual}}</td>
+          <td id="c_dd_idle_timeout_{{loop.index}}">{{row.CampaignStage.data_dispatcher_idle_timeout}}</td>
+          <td id="c_dd_worker_timeout_{{loop.index}}">{{row.CampaignStage.data_dispatcher_worker_timeout}}</td>
         {% else %}
           <td id="c_dataset_{{loop.index}}">{{row.CampaignStage.dataset}}</td>
         {% endif %}
@@ -244,6 +249,7 @@ Campaign Stages
         </div>
       </div>
       {% if data.campaign_stages[0].Campaign.data_handling_service == "sam" %}
+      <h4 class="ui horizontal divider">SAM Settings {{ show_hint('#compose-a-loginsetup-script', 'Help page') }}</h4>
         <div id="dataset-section" class="three fields">
             <div class="sam-dataset-section field">
               <label>Dataset or Split Data </label>
@@ -267,7 +273,47 @@ Campaign Stages
             </div>
         </div>
       {% else %}
-        <div id="dataset-section" class="three fields">
+      <h4 class="ui horizontal divider">Data Dispatcher Settings {{ show_hint('#compose-a-loginsetup-script', 'Help page') }}</h4>
+      <div id="dataset-section" class="three fields">
+        <div class="field">
+          <label>Stage Methodology 
+            <a target="_blank">
+              <i style="float: none" class="icon small help circle link tooltip">
+                <span class="tooltiptext">Determines how POMS should handle the creation of new data dispatcher projects. This only applies if a Dataset Query is used.</span>
+              </i>
+            </a>
+          </label>
+          <select class="ui dropdown" name="ae_dd_stage_methodology" id="ae_dd_stage_methodology">
+            <option value="standard" title="POMS will create a new data dispatcher project using the provided dataset query on each campaign stage submission.">Standard</option>
+            <option value="1P" title="POMS will create a new data dispatcher project with the provided dataset query during the FIRST submission of the campaign stage only. All subsequent submissions of this campaign stage will use this project, unless the query is changed.">OneP</option>
+          </select>
+        </div>
+        <div class="field">
+          <label>Recovery Mode
+            <a target="_blank">
+              <i style="float: none" class="icon small help circle link tooltip">
+                <span class="tooltiptext">Specified how POMS should behave regarding recovery jobs.</span>
+              </i>
+            </a>
+          </label>
+          <select class="ui dropdown" name="ae_dd_recovery_mode" id="ae_dd_recovery_mode">
+            <option value="standard" title="POMS will automatically run recovery submission up to a maximum of 2 times, as needed. It will then continue with dependency launches, or subsequent stages.">Standard</option>
+            <option value="aggressive" title="POMS will continuously run automatic recovery submissions until the project completion percentage matches specified value, or 100%. Dependency submissions, and subsequent stages will not be launched until this threshold is met.">Aggressive</option>
+          </select>
+        </div>
+        <div class="field" style="width: max-content;">
+            <label>Virtual</label>
+            <center>
+              <input type="checkbox" id="ae_dd_virtual" name="ae_dd_virtual"/>
+              <a target="_blank">
+                <i class="icon small help circle link tooltip" style="vertical-align: top;">
+                  <span class="tooltiptext">Set this to true if using virtual project files.</span>
+                </i>
+              </a>
+            </center>
+        </div>
+      </div>
+      <div id="dataset-section" class="three fields">
           <div class="dd-dataset-section field">
             <label>Dataset Query 
               <a target="_blank">
@@ -279,10 +325,10 @@ Campaign Stages
             <input type="text" id="ae_dd_dataset_query" name="ae_dd_dataset_query" placeholder="'files from namespace:name'" >
           </div>
           <div class="dd-dataset-section field">
-            <label>Project Id Override
+            <label>Project ID (Override)
               <a target="_blank">
                 <i style="float: none" class="icon small help circle link tooltip">
-                  <span class="tooltiptext">If a Project ID override is provided, POMS will use this Data Dispatcher Project for each submission. 'Split Type' and 'Dataset Query' will be ignored if this value is set.</span>
+                  <span class="tooltiptext">If a Project ID override is provided, POMS will use this Data Dispatcher Project for each submission. 'Split Type' and 'Dataset Query' will be ignored if this value is set. Do not modify this value if using the 'OneP' stage methodology.</span>
                 </i>
               </a>
             </label>
@@ -292,8 +338,31 @@ Campaign Stages
             <label>Completion % </label>
             <input type="text" id="ae_completion_pct" name="ae_completion_pct" placeholder="95">
           </div>
-        </div>
+      </div>
+      <div id="dataset-section" class="two fields">
+          <div class="dd-dataset-section field">
+            <label>Idle Timeout
+              <a target="_blank">
+                <i style="float: none" class="icon small help circle link tooltip">
+                  <span class="tooltiptext">If there is no file reserve/release activity for the specified time interval, the project goes into 'abandoned' state. Default is 72 hours (3 days). If set to 0 or null, the project remains active until complete. Measured in seconds.</span>
+                </i>
+              </a>
+            </label>
+            <input type="number" id="ae_dd_idle_timeout" name="ae_dd_idle_timeout" value="259200"/>
+          </div>
+          <div class="dd-dataset-section field">
+            <label>Worker Timeout (Override)
+              <a target="_blank">
+                <i style="float: none" class="icon small help circle link tooltip">
+                  <span class="tooltiptext">If not 0 or null, all file handles will be automatically released if allocated by same worker for longer than the `worker_timeout`. Measured in seconds.</span>
+                </i>
+              </a>
+            </label>
+            <input type="number" id="ae_dd_worker_timeout" name="ae_dd_worker_timeout">
+          </div>
+      </div>
       {% endif %}
+      <h4 class="ui horizontal divider">Split Data {{ show_hint('#compose-a-loginsetup-script', 'Help page') }}</h4>
       <div class="two fields">
         <div class="field">
           <label>Split Type </label>
@@ -306,6 +375,7 @@ Campaign Stages
           <i class="edit link blue icon" onclick="split_type_picker.start('ae_test_split_type')"></i>
         </div>
       </div>
+      <h4 class="ui horizontal divider">Overrides {{ show_hint('#compose-a-loginsetup-script', 'Help page') }}</h4>
       <div class="one field">
         <div class="field">
             <label>Parameter Overrides<i class="large edit link blue icon" id="edit_param_modal_btn"></i></label>
@@ -318,7 +388,7 @@ Campaign Stages
             <textarea rows="2" id="ae_test_param_overrides_text" disabled>[]</textarea>
         </div>
       </div>
-
+      <h4 class="ui horizontal divider">Dependencies {{ show_hint('#compose-a-loginsetup-script', 'Help page') }}</h4>
       <div class="one field">
         <div class="field">
             <label>Depends On<i class="large edit link blue icon" id="edit_depends_modal_btn"></i></label>
@@ -512,7 +582,7 @@ $('#campaign_add_edit_form')
       ae_active :                 'empty',
       ae_software_version :       'empty',
       ae_split_type :             'empty',
-      ae_test_split_type :        'empty',
+      //ae_test_split_type :        'empty',
       ae_launch_id :              'empty',
       ae_campaign_definition_id : 'empty',
       ae_cronjon:                 'empty',
@@ -531,7 +601,9 @@ $('#campaign_add_edit_form')
       var datasetValue = $("input[name='ae_dataset']").val();
       var datasetQueryValue = $("input[name='ae_dd_dataset_query']").val();
       var projectValue = $("input[name='ae_dd_project_id']").val();
-
+      var idleValue = $("input[name='ae_dd_idle_timeout]").val();
+      var worker_value = $("input[name='ae_dd_worker_timeout']").val();
+      
       // Return true if at least one of the fields has a value
       return datasetValue || datasetQueryValue || projectValue;
     }
@@ -821,7 +893,17 @@ function edit_campaign(index,clone) {
   $("#ae_software_version").val( $("#c_software_version_"+index).text());
   $("#ae_data_handling_service").val($("#c_data_handling_service_"+index).text());
   $("#ae_dd_dataset_query").val($("#c_dd_dataset_query_"+index).text());
+  if($("#c_dd_virtual_"+index).text() === "True"){
+    $("#ae_dd_virtual").prop("checked", true);
+  }
+  else{
+    $("#ae_dd_virtual").prop("checked", true);
+  }
   $("#ae_dd_project_id").val($("#c_dd_project_id_"+index).text());
+  $("#ae_dd_stage_methodology").val($("#c_dd_stage_methodology_"+index).text());
+  $("#ae_dd_recovery_mode").val($("#c_dd_recovery_mode_"+index).text());
+  $("#ae_dd_idle_timeout").val($("#c_dd_idle_timeout_"+index).text());
+  $("#ae_dd_worker_timeout").val($("#c_dd_worker_timeout_"+index).text());
   $("#ae_dataset").val($("#c_dataset_"+index).text());
   let data_handler = $("#ae_data_handling_service").val();
   if (data_handler == "data_dispatcher"){
