--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -37,6 +37,8 @@
 
     <link rel="stylesheet" type="text/css" href="{{pomspath}}/static/css/semantic.css">
     <link rel="stylesheet" type="text/css" href="{{pomspath}}/static/css/paging.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.0/cdn/themes/light.css" />
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.0/cdn/shoelace-autoloader.js"></script>
     <script src="{{pomspath}}/static/js/semantic.js"></script>
     <script src="{{pomspath}}/static/js/paging.js"></script>
     <script src="{{pomspath}}/static/js/poms.js"></script>
