- Changes to sqlalchemy scripts for compatibility with psql client version - New configuration file handler (toml) - Updated wrapup script to significantly reduce workload & prevent database locking, which has become problematic in recent weeks. - Bug fixes and minor changes to support poms migration to almalinux 9.

--- a/webservice/templates/standard_menu.html
+++ b/webservice/templates/standard_menu.html
@@ -24,7 +24,7 @@
   <div data-ecl class="item">
     <div class="header">External Links</div>
     <div class="menu">
-        <a class="active teal item" href='{{docspath}}/user_documentation' target="_blank">
+        <a class="active teal item" href='https://github.com/fermitools/poms/wiki' target="_blank">
             POMS User Documentation
         </a>
     </div>
