- samweb split to samnova, samgm2, etc - corrected smtp debug flag to return as integer - updated help pages to point to github wiki

--- a/webservice/templates/index.html
+++ b/webservice/templates/index.html
@@ -31,7 +31,7 @@ Job Launches: {{launches}}
 
 {%block content%}
 
-{% set url = docspath + "/user_documentation#" %}
+{% set url = docspath + "/#" %}
 
  <div class="ui cards">
 
