--- a/webservice/templates/unauthorized_user.html
+++ b/webservice/templates/unauthorized_user.html
@@ -27,7 +27,7 @@
         Please do <b>not</b> fill out an incident or request to POMS as access must be granted by your experiment.
         <br><br>
         For more information refer to
-        <a href="{{docspath}}/user_documentation#getting-access-new-experiments-new-accounts-users-and-roles" target="_blank">POMS: Getting Started</a>
+        <a href="{{docspath}}#getting-access-new-experiments-new-accounts-users-and-roles" target="_blank">POMS: Getting Started</a>
     </div>
   </body>
 </html>
