--- a/webservice/templates/help_button.html
+++ b/webservice/templates/help_button.html
@@ -1,4 +1,4 @@
-  <a target="_blank" href="{{docspath}}/{{help_page}}/{{anchor}}">
+  <a target="_blank" href="{{docspath}}/{{anchor}}">
     <i style="float: none" class="icon small help circle link tooltip">
       {{ '<span class="tooltiptext">' ~ hint ~ ' (see more...)' ~ '</span>' if hint }}
     </i>
