--- a/webservice/templates/submission_details.html
+++ b/webservice/templates/submission_details.html
@@ -138,7 +138,11 @@ Landscape (disabled, no info found) <br>
 {%endif%}
 
 {%if submission.project %}
+{%if session_experiment == 'mu2e' %}
 View the <a href="{{sam_base|replace('web',session_experiment)}}/station_monitor/sam{{session_experiment}}/stations/{{session_experiment}}/projects/{{submission.project}}">SAM Project</a> <br>
+{%else%}
+View the <a href="{{sam_base|replace('web',session_experiment)}}/station_monitor/{{session_experiment}}/stations/{{session_experiment}}/projects/{{submission.project}}">SAM Project</a> <br>
+{%endif%}
 {%endif%}
 
 {%if submission.jobsub_job_id %}
